--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -113,9 +113,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
+  width: 125px;
+  height: 35px;
+  cursor: pointer;
   margin-left: 16px;
   transform: translateZ(0);
   border-radius: var(--border-radius);
